experimental/parser/testdata/parser/enum/incomplete.proto.stderr.txt
error: missing enum value in declaration
  --> testdata/parser/enum/incomplete.proto:20:5
   |
20 |     NO_TAG;
   |     ^^^^^^^

error: missing enum value in declaration
  --> testdata/parser/enum/incomplete.proto:21:5
   |
21 |     NO_TAG2
   |     ^^^^^^^

error: unexpected `}` after definition
  --> testdata/parser/enum/incomplete.proto:22:1
   |
22 | }
   | ^ expected `;`

encountered 3 errors
